# multi-llm-chat

./: .gitignore  BOOTSTRAP_REFACTOR_PROPOSAL.md  LICENSE  README.md  README2.md  README3.md  README4.md  README5.md  REFACTOR_AGENT_ASSIGNMENT.md  REFACTOR_OVERVIEW.md  Vision - OPENAI (Claude, o1) DOCS.md  adaptive_instruction_system.md  adaptive_instructions.py  ai-battle.py  api-documentation-planning.md  arbiter.py  arbiter_v2.py  arbiter_v3.py  arbiter_v4.py  architectural-analysis.md  architecture-performance-review-sonnet.md  backup of image classes.py  claude_reasoning_config.py  config_integration.py  configdataclasses.py  configuration.py  context_analysis.py  conversation_reporting.py  file_handler.py  fix_html.py  gemini_vision_client.py  humanise.py  implementation_risk_assessment.md  implementation_summary.md  lmstudio_client.py  memory-optimization.md  metrics_analyzer.py  migrate-claude-cli-transcript.py  migrate_to_src.py  mkdocs.yml  (+12 more)
.github/: dependabot.yml
.github/workflows/: pylint.yml  static.yml
docs/: AGENT_TASK.md  README.md  SECURITY.md  adaptive_instruction_deep_dive.md  adaptive_instruction_documentation_plan.md  adaptive_instruction_system.md  claude-3-7-reasoning.md  configuration.md  detailed-overview.md  framework-assessment.md  full-information.md  generate_docs.py  ollama-langchain-migration.md  project_improvement_opportunities.md  reasoning-models.md  reporting_integration.md  requirements.txt  setup_docs.sh  system_instructions.md  technical_showcase.md
docs/api/: README.md  index.md
docs/api/core/: conversation_manager.md  conversation_manager_run_conversation.md
docs/api/examples/: basic_usage.md  configuration_driven.md
docs/api/templates/: class_template.md  method_template.md  module_template.md
docs/completed-changes/: README4.md  add_reasoning_models.md  claude-vision-enhancements.md  claude_models_implementations.md  openai-responses-api.md
docs/examples/: README.md  run_lmstudio.py  run_vision_discussion.py
docs/examples/configs/: README.md  medical_analysis.yaml  ollama_thinking_discussion.yaml  reasoning_comparison.yaml
docs/future-plans/: multi-file-vision-fix-plan-revised.md  multi-file-vision-fix-plan.md  multi-file-vision-plan.md  tool-use-extension-plan.md
examples/: README.md  discussion_config.yaml  reasoning_test.py  run_code_demo.py  run_lmstudio.py  run_vision_discussion.py  vision_discussion_3D Rotational T2 Flair movie.html  vision_discussion_88.html  vision_discussion_multi-view.html
examples/configs/: architecture_review.yaml  claude_reasoning_vision.yaml  code_demo_discussion.yaml  code_review.yaml  medical_analysis.yaml  multi_file_vision_discussion.yaml  random_vision_discussion.yaml  vision_discussion.yaml
future-plans/: api-integration-plan.md  extension-plan.md
src/: README.md  adaptive_instructions.py  ai-battle.py  ai_battle.py  arbiter_v4.py  claude_reasoning_config.py  configdataclasses.py  configuration.py  constants.py  context_analysis.py  demo_generator.py  file_handler.py  lmstudio_client.py  metrics_analyzer.py  migrate_to_src.py  model_clients.py  shared_resources.py  ui.py
src/core/: client_factory.py  model_discovery.py  model_registry.py
src/data/: model_registry.yaml
src/io/: __init__.py  conversation_io.py  report_generator.py
src/scripts/: __init__.py  run_comparison.py  run_standard.py
src/static/css/: arbiter_report.css
static/css/: aibattle.css
tests/: test_adaptive_instructions.py  test_adaptive_simple.py  test_arbiter_v4.py  test_claude_reasoning.py  test_configuration.py  test_context_analysis.py  test_extended_thinking.py  test_file_handler.py  test_mock_responses.py  test_ollama_client.py  test_openai_image.py  test_openai_responses.py  test_reasoning_models.py  test_reasoning_with_input.py  test_vision_discussion.py  unittest-arbiter-grounding.py
