[project]
name = "claude-gemini-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiosignal==1.3.2",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.46.0",
    "anyio==4.8.0",
    "attrs==24.3.0",
    "beautifulsoup4==4.12.3",
    "blinker==1.9.0",
    "cachetools==5.5.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "curated-tokenizers==0.0.9",
    "curated-transformers==0.1.1",
    "distro==1.9.0",
    "filelock==3.17.0",
    "flash-attention==1.0.0",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google==3.0.0",
    "google-auth==2.37.0",
    "google-genai==0.7.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.27.1",
    "idna==3.10",
    "jinja2==3.1.6",
    "jiter==0.8.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mlx==0.22.0",
    "mlx-lm==0.21.1",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "narwhals==1.23.0",
    "networkx==3.4.2",
    "nlp>=0.4.0",
    "numpy==2.2.2",
    "ollama>=0.4.7",
    "openai>=1.63.2",
    "opencv-python>=4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "phidata==2.7.10",
    "pillow==11.1.0",
    "pip>=25.0",
    "plotly>=6.0.0",
    "propcache==0.2.1",
    "protobuf==5.29.3",
    "psutil>=7.0.0",
    "pyarrow==19.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.8.1",
    "pydeck==0.9.1",
    "pygments==2.19.1",
    "pylint>=3.3.6",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "referencing==0.36.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "rsa==4.9",
    "safetensors==0.5.2",
    "scikit-learn==1.5.0",
    "scipy>=1.15.1",
    "sentencepiece==0.2.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "spacy==3.8.4",
    "spacytextblob>=5.0.0",
    "streamlit==1.41.1",
    "tenacity==9.0.0",
    "textblob>=0.19.0",
    "thinc>=8.3.0,<9.0.0",
    "tokenizers==0.21.0",
    "toml==0.10.2",
    "torch==2.6.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "transformers==4.48.1",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "watchdog==6.0.0 ; sys_platform != 'darwin'",
    "websockets==14.2",
    "yarl==1.18.3",
]

[tool.uv.workspace]
members = ["mlx", "mlx-model"]
